k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cbr-news
  labels:
    app.kubernetes.io/part-of: cbr-news
